--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -31,7 +31,8 @@
             android:text="@string/btn1_text"
             android:id="@+id/btn1"
             android:layout_gravity="center_horizontal"
-            android:layout_weight="0.1" />
+            android:layout_weight="0.1"
+            android:onClick="btn1Toast"/>
 
         <Button
             android:layout_width="200dp"
@@ -39,7 +40,8 @@
             android:text="@string/btn2_text"
             android:id="@+id/btn2"
             android:layout_gravity="center_horizontal"
-            android:layout_weight="0.1" />
+            android:layout_weight="0.1"
+            android:onClick="btn2Toast"/>
 
         <Button
             android:layout_width="200dp"
@@ -47,7 +49,8 @@
             android:text="@string/btn3_text"
             android:id="@+id/btn3"
             android:layout_gravity="center_horizontal"
-            android:layout_weight="0.1" />
+            android:layout_weight="0.1"
+            android:onClick="btn3Toast"/>
 
         <Button
             android:layout_width="200dp"
@@ -55,7 +58,8 @@
             android:text="@string/btn4_text"
             android:id="@+id/btn4"
             android:layout_gravity="center_horizontal"
-            android:layout_weight=".1" />
+            android:layout_weight=".1"
+            android:onClick="btn4Toast"/>
 
         <Button
             android:layout_width="200dp"
@@ -63,7 +67,8 @@
             android:text="@string/btn5_text"
             android:id="@+id/btn5"
             android:layout_gravity="center_horizontal"
-            android:layout_weight=".1" />
+            android:layout_weight=".1"
+            android:onClick="btn5Toast"/>
 
         <Button
             android:layout_width="200dp"
@@ -71,6 +76,7 @@
             android:text="@string/btn6_text"
             android:id="@+id/btn6"
             android:layout_gravity="center_horizontal"
-            android:layout_weight=".1" />
+            android:layout_weight=".1"
+            android:onClick="btn6Toast"/>
     </LinearLayout>
 </RelativeLayout>
